# ria

./: Cargo.toml
docs/: config.md  parity.md  release-checklist.md  release-notes.md  ria.toml  rules.md
docs/roadmaps/: roadmap-account-community.md  roadmap-config-control-pane.md  roadmap-core-cli.md  roadmap-file-transfer.md  roadmap-item-metadata-search.md  roadmap-parity-quality.md  roadmap-tranche-1.md  roadmap-tranche-2.md  roadmap-tranche-3.md
src/: errors.rs  lib.rs  main.rs  signals.rs  telemetry.rs
src/cli/: mod.rs
src/config/: mod.rs
src/domains/: mod.rs
src/domains/account/: mod.rs
src/domains/core/: mod.rs
src/domains/metadata/: mod.rs
src/domains/transfer/: mod.rs
src/http/: mod.rs
src/output/: mod.rs
src/utils/: mod.rs
