[package]
name = "ria"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
directories = "6.0.0"
globset = "0.4.18"
libc = "0.2.183"
md5 = "0.8.0"
reqwest = { version = "0.13.2", features = ["blocking", "json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha1 = "0.11.0"
signal-hook = "0.4.3"
thiserror = "2.0.18"
toml = "1.0.7"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }
url = "2.5.8"

[dev-dependencies]
httpmock = "0.8.3"
tempfile = "3.27.0"
